Fix header and footer spacings

--- a/src/components/BookmarkNote/BookmarkNote.module.scss
+++ b/src/components/BookmarkNote/BookmarkNote.module.scss
@@ -1,6 +1,6 @@
 .bookmark {
   .emptyBookmark {
-    width: 16px;
+    width: 12px;
     height: 16px;
     display: inline-block;
     margin: 0px 0px;
@@ -15,7 +15,7 @@
   }
 
   .fullBookmark {
-    width: 16px;
+    width: 12px;
     height: 16px;
     display: inline-block;
     margin: 0px 0px;
